<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">tts_demo</string>
    <string name="action_settings">Settings</string>
    <string name="mode_prompt">请选择合成模式</string>
    <string name="textinput">此处输入用于语音合成的文本</string>
    <string name="log_area">日志输出区域</string>
    <string name="start">开始</string>
    <string name="clear_log">清屏</string>
    <string name="close">关闭SDK</string>

    <string-array name="modes">
        <item>短文本语音合成</item>
        <item>流式语音合成</item>
    </string-array>

</resources>
