<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tts_demo.MainActivity" >

    <EditText
        android:id="@+id/tv_text"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="4dp"
        android:background="@android:color/black"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:lineSpacingExtra="1dp"
        android:text="@string/textinput"
        android:textColor="@android:color/white" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ScrollView
            android:id="@+id/scrollView1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/black" >

            <TextView
                android:id="@+id/tv_logview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/log_area"
                android:lineSpacingExtra="1dp"
                android:textColor="@android:color/white" />
        </ScrollView>
    </RelativeLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Spinner
                android:id="@+id/sp_mode"
                android:entries="@array/modes"
                android:prompt="@string/mode_prompt" />

            <Button
                android:id="@+id/btn"
                android:layout_column="1"
                android:text="@string/start"
                android:textSize="16sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bt_clear"
                android:text="@string/clear_log"
                android:textSize="16sp" />

            <Button
                android:id="@+id/bt_close"
                android:layout_column="1"
                android:text="@string/close"
                android:textSize="16sp" />
        </TableRow>
    </TableLayout>

</LinearLayout>
